<resources>
    <string name="app_name">Final Project</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="submit">Submit</string>
    <string name="enter_a_summoner_name">Enter a Summoner Name</string>
    <string name="search">Search</string>
    <string name="logout">LogOut</string>
    <string name="PasswordMatch">Password do not match, Please re-enter!</string>
    <string name="LogError">Unable to Log in at this time</string>
    <string name="WrongUserPass">Error: incorrect username or password!</string>
    <string name="LoggedInAs">You are now logged as </string>
</resources>
