<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dblasena.cis.finalproject.CreateAccountActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextCreateEmail"
        android:hint="@string/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/editTextCreateEmail"
        android:layout_alignRight="@+id/editTextCreateEmail"
        android:layout_alignEnd="@+id/editTextCreateEmail"
        android:layout_marginTop="27dp"
        android:id="@+id/editTextCreatePassword"
        android:hint="@string/password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/editTextCreatePassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:id="@+id/editTextCreatePassword2"
        android:hint="@string/re_enter_password" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCreateAccount"
        android:layout_alignLeft="@+id/buttonCreateAccount"
        android:layout_alignStart="@+id/buttonCreateAccount"
        android:id="@+id/buttonback" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonback"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textViewStatus" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:id="@+id/buttonCreateAccount"
        android:layout_below="@+id/editTextCreatePassword2"
        android:layout_toRightOf="@+id/editTextCreatePassword2"
        android:layout_toEndOf="@+id/editTextCreatePassword2" />
</RelativeLayout>
